# OgreNotes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  admin.md  deny.toml  docker-compose.yml  start.sh
crates/api/: Cargo.toml
crates/api/src/: audit_retention.rs  auth_policy.rs  backfill.rs  claude.rs  compaction.rs  digest.rs  edit_activity.rs  embed_allowlist.rs  error.rs  folder_inherit_cache.rs  lib.rs  main.rs  observability.rs  redis_session.rs  state.rs  trash_cleanup.rs  worker_mode.rs
crates/api/src/middleware/: activity.rs  auth.rs  metrics.rs  mod.rs  rate_limit.rs  scim_auth.rs
crates/api/src/routes/: activity.rs  admin.rs  ask.rs  audit.rs  auth.rs  chat.rs  client_telemetry.rs  comments.rs  documents.rs  folders.rs  history.rs  jobs.rs  mentions.rs  metrics.rs  mfa.rs  mod.rs  notifications.rs  relationships.rs  saml.rs  scim.rs  search.rs  sharing.rs  slash_commands.rs  template_galleries.rs  users.rs  workspaces.rs  ws.rs
crates/api/src/scim/: discovery.rs  dtos.rs  filter.rs  mapping.rs  mod.rs
crates/api/src/seed/: mod.rs
crates/api/tests/: test_activity_hooks.rs  test_admin.rs  test_ask.rs  test_ask_acl.rs  test_ask_admin_gate.rs  test_ask_quota.rs  test_audit_retention.rs  test_auth.rs  test_backfill_chat_edges.rs  test_backfill_snapshots.rs  test_backfill_user_role.rs  test_backfill_workspaces.rs  test_blobs.rs  test_body_size_limits.rs  test_bulk_export.rs  test_bulk_ops.rs  test_chat.rs  test_client_telemetry.rs  test_comment_broadcast.rs  test_comments.rs  test_digest.rs  test_documents.rs  test_email_cap.rs  test_embed_resolve.rs  test_favorites.rs  test_folders.rs  test_history.rs  test_import_docx.rs  test_import_docx_e2e.rs  test_import_pdf_e2e.rs  test_jobs.rs  test_last_active_middleware.rs  test_mentions_resolve.rs  test_metrics_rum.rs  test_mfa.rs  test_multi_folder.rs  test_notifications.rs  test_rate_limit_fail_open.rs  test_rate_limits.rs  test_relationships.rs  (+18 more)
crates/api/tests/common/: mod.rs
crates/auth/: Cargo.toml
crates/auth/src/: jwt.rs  lib.rs  mfa.rs  oauth.rs  session.rs  user.rs
crates/collab/: Cargo.toml
crates/collab/benches/: yrs_ops.rs
crates/collab/src/: awareness.rs  diff.rs  document.rs  export.rs  import.rs  import_docx.rs  import_pdf.rs  import_spreadsheet.rs  lib.rs  mail_merge.rs  protocol.rs  redis_pubsub.rs  room.rs  schema.rs  snapshot.rs
crates/collab/src/blocks/: calendar.rs  kanban.rs  mermaid.rs  mod.rs  validate_writes.rs
crates/collab/tests/: import_fuzz.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  id.rs  lib.rs  time.rs
crates/common/src/metrics/: emf.rs  mod.rs  recorder.rs  rolling_users.rs  tracing_layer.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: bedrock.rs  chunker.rs  error.rs  lib.rs  qdrant.rs
crates/notify/: Cargo.toml
crates/notify/src/: cap.rs  lib.rs  policy.rs  sender.rs  service.rs  templates.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/search/tests/: props.proptest-regressions  props.rs
crates/storage/: Cargo.toml
crates/storage/src/: dynamo.rs  lib.rs  s3.rs
crates/storage/src/models/: activity.rs  admin_audit.rs  document.rs  folder.rs  mfa_recovery.rs  mod.rs  notification.rs  security_audit.rs  session.rs  snapshot.rs  template_gallery.rs  (+5 more)
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
crates/worker/tests/: integration_queue.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html
frontend/locales/ar/: main.ftl
frontend/locales/de/: main.ftl
frontend/locales/en-US/: main.ftl
frontend/locales/es/: main.ftl
frontend/locales/fr/: main.ftl
frontend/locales/it/: main.ftl
frontend/src/: app.rs  editor_width.rs  i18n.rs  lib.rs  main.rs  menu_nav.rs  nav_bridge.rs  observability.rs  rum.rs  theme.rs  touch.rs
frontend/src/a11y/: focus_trap.rs  mod.rs
frontend/src/api/: admin.rs  ask.rs  blobs.rs  chats.rs  client.rs  comments.rs  documents.rs  folders.rs  history.rs  mfa.rs  mod.rs  notifications.rs  relationships.rs  saml_config.rs  scim_tokens.rs  search.rs  sharing.rs  users.rs
frontend/src/collab/: mod.rs  ws_client.rs
frontend/src/commands/: ask_bridge.rs  editor_bridge.rs  mod.rs  nav_bridge.rs
frontend/src/components/: accessibility_settings.rs  account_menu.rs  app_shell.rs  ask_dialog.rs  at_menu.rs  block_menu.rs  calendar_modal.rs  chat_panel.rs  code_lang_chip.rs  comment_highlights.rs  comment_popup.rs  confirm_dialog.rs  conversation_pane.rs  cursor_overlay.rs  diff_block_view.rs  doc_theme_selector.rs  document_details.rs  document_outline.rs  dom_position.rs  duplicate_dialog.rs  editor_component.rs  editor_context_menu.rs  editor_gutter.rs  editor_width_toggle.rs  file_browser.rs  find_replace_bar.rs  folder_picker.rs  formula_keyboard.rs  history_viewer.rs  kanban_card_modal.rs  locale_selector.rs  mention_overlay.rs  menu_bar.rs  mermaid_modal.rs  mod.rs  notification_bell.rs  notification_settings.rs  profile_settings.rs  relationship_panel.rs  search_dialog.rs  (+10 more)
frontend/src/editor/: clipboard.rs  commands.rs  debug.rs  find.rs  find_highlight.rs  input_rules.rs  keymap.rs  markdown.rs  mention_url.rs  mod.rs  model.rs  plugins.rs  position.rs  schema.rs  selection.rs  state.rs  transform.rs  view.rs  yrs_bridge.rs
frontend/src/inserts/: mod.rs
frontend/src/pages/: auth_complete.rs  document.rs  home.rs  login.rs  mfa_challenge.rs  mfa_enroll.rs  mod.rs  settings.rs  workspace_saml.rs  workspace_scim.rs
frontend/src/spreadsheet/: eval.rs  functions.rs  mod.rs  parser.rs  pivot.rs  stats.rs  translate.rs
frontend/static/: manifest.webmanifest  service-worker.js
frontend/static/fonts/: THIRD-PARTY-FONTS.md
frontend/style/: fonts.css  main.css  responsive.css  spreadsheet.css  tokens-dark.css  tokens-light.css  variables.css
frontend/tests/: browser.rs  collab_e2e.rs
tests/load/: Cargo.toml  README.md
tests/load/src/: main.rs
tests/rag-eval/: Cargo.toml  README.md  queries.json
tests/rag-eval/src/: lib.rs  main.rs
(+281 files in other folders)
