[package]
name = "ogrenotes-frontend"
version = "0.1.0"
edition = "2024"

[lib]
name = "ogrenotes_frontend"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
urlencoding = "2"
yrs = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "Text",
    "NodeList",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlBrElement",
    "HtmlImageElement",
    "HtmlAnchorElement",
    "HtmlPreElement",
    "HtmlHrElement",
    "Location",
    "Storage",
    "console",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "InputEvent",
    "CompositionEvent",
    "ClipboardEvent",
    "FocusEvent",
    "Selection",
    "Range",
    "StaticRange",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "DomTokenList",
    "CssStyleDeclaration",
    "Performance",
    "InputEventInit",
    "KeyboardEventInit",
    "History",
    "File",
    "FileList",
    "Blob",
    "MouseEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
