[package]
name = "ogrenotes-api"
version.workspace = true
edition.workspace = true
default-run = "ogrenotes-api"

[dependencies]
ogrenotes-common = { workspace = true }
ogrenotes-storage = { workspace = true }
ogrenotes-auth = { workspace = true }
ogrenotes-collab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
fred = { workspace = true }
nanoid = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
proptest = { workspace = true }
