[package]
name = "ogrenotes-auth"
version.workspace = true
edition.workspace = true

[dependencies]
ogrenotes-common = { workspace = true }
ogrenotes-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
