[package]
name = "ogrenotes-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
ogrenotes-common = { workspace = true }
ogrenotes-storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
totp-rs = { workspace = true }
aes-gcm = { workspace = true }
bcrypt = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
