[package]
name = "ogrenotes-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
