[package]
name = "ogrenotes-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
aws-sdk-bedrockruntime = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
