[package]
name = "ogrenotes-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
aws-sdk-bedrockruntime = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# Hermetic Bedrock tests: StaticReplayClient stands in for the live
# HTTP transport so `BedrockEmbedder` request/response handling can be
# exercised without AWS credentials or network access.
aws-smithy-http-client = { version = "1.1", features = ["test-util"] }
aws-smithy-types = "1"
http = "1"
