[package]
name = "ogrenotes-notify"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
ogrenotes-common = { workspace = true }
ogrenotes-storage = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

async-trait = { workspace = true }
lettre = { workspace = true }

# #40 email-link HMAC token
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

aws-sdk-dynamodb = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
