[package]
name = "ogrenotes-storage"
version.workspace = true
edition.workspace = true

[dependencies]
ogrenotes-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
serde_dynamo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
