[package]
name = "ogrenotes-rag-eval"
version = "0.1.0"
edition = "2024"
publish = false

# Workspace-excluded for the same reason `tests/load` is: this crate
# pulls a reqwest version chosen for client convenience and we don't
# want its dep tree merging with the API server's. See the root
# Cargo.toml `exclude` list.

[[bin]]
name = "rag-eval"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1"
futures-util = "0.3"
bytes = "1"
